--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
 
-	<script type="module" src='/build/main.js'></script>
+	<script type="module" src='build/main.js'></script>
 </head>
 
 <body>
