--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Kite Calculator</title>
 
-	<link rel='icon' type='image/png' href='./images/kiter_24.png'>
+	<link rel='icon' type='image/png' href='./images/kite.png'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
